# zenithar

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  REQUIREMENTS.md  docker-compose.yml
.github/workflows/: docker.yml
app/: .gitignore  README.md  package.json
app/landing/: index.html
app/scripts/: patch-android.sh
app/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json  remote-opener.json
app/src-tauri/src/: lib.rs  main.rs
backend/: Cargo.toml  build.rs
backend/migrations/: 0001_init.sql  0002_message_edited_at.sql  0003_direct_rooms.sql  0004_push_tokens.sql  0005_avatars.sql  0006_reactions.sql  0007_message_sticker.sql  0008_saved_items.sql  0009_saved_source.sql  0010_attachment_alpha.sql  0011_saved_alpha.sql  0012_sticker_packs.sql  0013_is_sticker.sql  0014_pack_public.sql  0015_index_tuning.sql
backend/src/: api.rs  auth.rs  avatars.rs  calls.rs  dashproxy.rs  db.rs  main.rs  models.rs  names.rs  packs.rs  presence.rs  push.rs  ratelimit.rs  recorder.rs  recordings.rs  routes.rs  saved.rs  send.rs  state.rs  stats.rs  storage.rs  telemetry.rs  uploads.rs  writer.rs  ws.rs
backend/src/calls/: mixer.rs  mod.rs  peer.rs  recorder.rs
docs/: deploy.md  design-notes.md  ideas.md
docs/plans/: phase-1-auth.md  phase-2-rooms.md  phase-3-attachments.md  phase-4-calls.md  phase-6-api.md
frontend/: package.json  tsconfig.json
frontend/scripts/: build.ts
frontend/src/: App.svelte  index.html  main.ts  styles.css
frontend/src/assets/: manifest.webmanifest
frontend/src/lib/: AddPackModal.svelte  Avatar.svelte  AvatarEditor.svelte  Call.svelte  Chat.svelte  ChatList.svelte  Composer.svelte  Connections.svelte  Header.svelte  Landing.svelte  Lightbox.svelte  Message.svelte  MessageMenu.svelte  PacksPanel.svelte  PickerTile.svelte  Principals.svelte  Profile.svelte  Stats.svelte  Sticker.svelte  StickerPreview.svelte  Thumb.svelte  VoicePlayer.svelte  call.ts  chat.ts  dotlottieWasm.ts  emoji.ts  i18n.ts  imageLoadPool.ts  lightbox.ts  messageMenu.ts  mic.ts  notify.ts  packs.ts  platform.ts  profile.ts  reactions.ts  recents.ts  saved.ts  session.ts  stickerPreview.ts  (+3 more)
frontend/src/lib/util/: download.test.ts  download.ts  format.test.ts  format.ts  linkify.test.ts  linkify.ts  rooms.test.ts  rooms.ts  time.test.ts  time.ts
tests/: e2e.spec.ts  package.json  playwright.config.ts  run.sh  tsconfig.json
transcoder/: Dockerfile  server.py
