[package]
name = "zenithar-backend"
version = "0.1.0"
edition = "2021"
description = "Zenithar — self-hosted corporate messenger backend (Phase 0 skeleton)"
license = "MIT"

[dependencies]
axum = { version = "0.8.9", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
rust-embed = { version = "8", features = ["mime-guess"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
ulid = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
getrandom = "0.2"
sha2 = "0.10"
base64 = "0.22"
time = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# WebRTC voice calls — sans-IO `rtc` crate. The server is the peer in the media
# path (ICE/DTLS/SRTP/RTP terminate here); we drive the I/O loop ourselves, which
# makes the forwarding logic unit-testable and gives full ICE/socket control.
rtc = "0.9"
bytes = "1.12.0"
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32.0", features = ["http-proto", "reqwest-client"] }
tracing-opentelemetry = "0.33.0"
# Only used to reverse-proxy the local GreptimeDB dashboard over plain HTTP/1 —
# no TLS/http2 (avoids pulling h2), keeping it light.
reqwest = { version = "0.13.4", default-features = false }

[profile.dev]
# bundled SQLite C compile is the slow part; keep our code fast to iterate
opt-level = 0
