[package]
name = "zenithar-backend"
version = "0.1.0"
edition = "2021"
description = "Zenithar — self-hosted corporate messenger backend (Phase 0 skeleton)"
license = "MIT"

[dependencies]
axum = { version = "0.8.9", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = [
    "trace",
    "cors",
    "compression-br",
    "compression-gzip",
    "compression-zstd",
] }
rust-embed = { version = "8", features = ["mime-guess"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
ulid = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
getrandom = "0.2"
# statvfs() for the admin dashboard's free-disk-space figure (unix only).
libc = "0.2"
sha2 = "0.10"
base64 = "0.22"
time = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
# Lossy WebP encoder (libwebp, vendored) for the viewer preview: ~25–35% smaller
# than JPEG at equal quality, keeps alpha. The C toolchain is already present for
# audiopus (libopus), so this adds no new build barrier.
webp = "0.3"
# SIMD-accelerated, high-quality (Lanczos3) downscaling for the viewer preview —
# pure Rust, several× faster than the `image` crate's resize. The `image` feature
# lets it resize `DynamicImage` buffers directly.
fast_image_resize = { version = "5", features = ["image"] }
# WebRTC voice calls — sans-IO `rtc` crate. The server is the peer in the media
# path (ICE/DTLS/SRTP/RTP terminate here); we drive the I/O loop ourselves, which
# makes the forwarding logic unit-testable and gives full ICE/socket control.
rtc = "0.9"
bytes = "1.12.0"
opentelemetry = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
# The span batch processor runs on its own (non-Tokio) thread, so the exporter
# must use a BLOCKING HTTP client — an async (reqwest) one panics there with
# "there is no reactor running". `reqwest-blocking-client` runs everywhere.
opentelemetry-otlp = { version = "0.32.0", features = [
    "http-proto",
    "reqwest-blocking-client",
] }
tracing-opentelemetry = "0.33.0"
# Reverse-proxies the local GreptimeDB dashboard (plain HTTP/1) AND sends FCM push
# over HTTPS. `rustls-no-provider` keeps it OpenSSL-free and shares the SAME crypto
# provider as the `rtc` stack (ring) — pulling reqwest's default (aws-lc-rs) would
# put two providers in the process and make rustls' auto-detect panic. `http2` for
# Google's endpoints; `json`/`form` for the FCM/OAuth bodies.
reqwest = { version = "0.13.4", default-features = false, features = ["json", "form", "rustls-no-provider", "http2"] }
# Direct handle on rustls only to install ring as the process-wide crypto provider
# at startup (shared by rtc + reqwest). Matches the version rtc pulls.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
# Sign the service-account JWT (RS256) used to mint FCM OAuth2 access tokens.
jsonwebtoken = "9"
audiopus = "0.2.0"

[profile.dev]
# bundled SQLite C compile is the slow part; keep our code fast to iterate
opt-level = 0
