[package]
name = "zenithar-app"
version = "0.1.0"
description = "Zenithar desktop client"
edition = "2021"
rust-version = "1.77"

# The bundled binary name (what ends up in the .app / .exe).
[[bin]]
name = "zenithar"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
