[package]
name = "zenithar-app"
version = "0.1.0"
description = "Zenithar desktop client"
edition = "2021"
rust-version = "1.77"

# The bundled binary name (what ends up in the .app / .exe).
[[bin]]
name = "zenithar"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"
# Deep links: `zenithar://…` opens/focuses the app. single-instance (with its
# deep-link feature) routes a link from a 2nd launch to the running app on Win/Linux.
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
