[package]
name = "zenithar-app"
version = "0.1.0"
description = "Zenithar desktop client"
edition = "2021"
rust-version = "1.77"

# The bundled binary name (what ends up in the .app / .exe).
[[bin]]
name = "zenithar"
path = "src/main.rs"

# Mobile (Android/iOS) builds the app as a library and calls `run()` via the
# generated entry point; desktop links the same lib into the binary above.
[lib]
name = "zenithar_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"
log = "0.4"
# Deep links: `zenithar://…` opens/focuses the app. single-instance (with its
# deep-link feature) routes a link from a 2nd launch to the running app on Win/Linux.
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

# App logs → Android logcat (tag `zenithar`); stderr on desktop.
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
